check for spotify app in info plist

--- a/Algorhythm/Info.plist
+++ b/Algorhythm/Info.plist
@@ -5,6 +5,10 @@
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
+            <key>LSApplicationQueriesSchemes</key>
+                <array>
+                    <string>spotify</string>
+                </array>
 			<key>CFBundleTypeRole</key>
 			<string>Editor</string>
 			<key>CFBundleURLName</key>
